# claude-code-manager

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  setup.py
src/claude_code_manager/: __init__.py  cli.py  config.py  core.py  environment.py  utils.py
src/claude_code_manager.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/claude_code_manager/mcp/: server.py
