[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-code-manager"
version = "0.1.0"
description = "A CLI tool for managing Claude Code temporary working environments"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "inquirer>=3.1.0",
    "rich>=13.0.0",
    "gitpython>=3.1.30",
    "pyyaml>=6.0",
    "click>=8.1.3",
]

[project.scripts]
ccm = "claude_code_manager.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]